# Tardis

./: .env  .gitignore  App.tsx  README.md  Tardis.apk  app.example.json  app.json  babel.config.js  metro.config.js  mint.json  package.json  pnpm-lock.yaml  prd.md  rls.sql  test-e2ee-calls.ts
escrow/: .key  Anchor.toml  package-lock.json  package.json  pnpm-lock.yaml  sales_escrow-keypair.json
escrow/programs/lending_program/: Cargo.toml
escrow/programs/sales_escrow/: Cargo.toml
escrow/programs/sales_escrow/src/: lib.rs
escrow/tests/: sales_escrow.ts
escrow/ui-test/: package-lock.json  package.json
escrow/ui-test/src/: App.tsx  main.tsx
scripts/: go-live-production.sh
server/: .env.example  .gitignore  Dockerfile  README.md  db.sqlite  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repro_db_issue.js  repro_db_issue.ts  test-broadcast.js  tsconfig.json
server/src/: check_db.cjs  index.ts  seed.ts
server/src/controllers/: chatController.ts  communityController.ts  followController.ts  jupiterUltraSwapController.ts  (+2 more)
solana-mobile-dev-skill-main/: README.md
solana-mobile-dev-skill-main/genesis-token/: SKILL.md
solana-mobile-dev-skill-main/skr-address-resolution/: SKILL.md
src/components/: PostComponent.tsx
src/screens/: CallScreen.tsx  ChatScreen.tsx  CommsListScreen.tsx  CommunitiesScreen.tsx  CommunityFeedScreen.tsx  CreateCommunityScreen.tsx  CreatePostScreen.tsx  EditProfileScreen.tsx  GroupProfileScreen.tsx  ProfileScreen.tsx  StartChatScreen.tsx  ThreadDetailScreen.tsx  TownSquareScreen.tsx  index.ts
src/styles/: theme.ts
(+199 files in other folders)
