[package]
name = "sales_escrow"
version = "3.0.0"
description = "Secure P2P Sales Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sales_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
bytemuck = { version = "1.16.1", features = ["derive"] }
